// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/12/2013 3:13:20
             - 07/12/2013 6:00:00
      </div>
      <div>
          rrule
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with pbehavior started in previous month 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with pbehavior started in previous month 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <!---->
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/08/2013 16:13:20
             - 07/08/2013 19:00:00
      </div>
      <div>
          rrule
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/12/2013 3:13:20
             - 07/12/2013 6:00:00
      </div>
      <div>
          rrule
      </div>
      <!---->
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment author 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment author 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/12/2013 3:13:20
             - 07/12/2013 6:00:00
      </div>
      <div>
          rrule
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <!---->
      <div>
          07/12/2013 3:13:20
             - 07/12/2013 6:00:00
      </div>
      <div>
          rrule
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without rrule 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without rrule 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/12/2013 3:13:20
             - 07/12/2013 6:00:00
      </div>
      <!---->
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without tstop 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge"
      style="background-color: rgb(43, 62, 79);"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate icon icon-name theme--light white--text"
        style="font-size: 16px;"
      />
    </span>
  </span>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without tstop 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div>
    <strong>
      Periodic behaviors
    </strong>
    <div>
      <div
        class="mt-2 font-weight-bold"
      >
          pbehavior-name
      </div>
      <div>
          Author: pbehavior-author
      </div>
      <div>
          Type: type-name
      </div>
      <div>
          Reason: pbehavior-reason-name
      </div>
      <div>
          07/12/2013 3:13:20
        <!---->
      </div>
      <div>
          rrule
      </div>
      <div>
          Last comment:
        <div
          class="ml-2"
        >
            - 
              pbehavior-comment-1-author: 
            pbehavior-comment-1-message
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
</div>
`;
